[package]
name = "Aegis-MCP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
