[package]
name = "Aegis-MCP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sled = "0.34.7"
tokenizers = "0.22.2"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
